--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "angular": "1.5.0",
     "angular-route": "~1.5.0",
     "angular-i18n": "~1.5.0",
+    "angular-cookies" : "~1.5.0",
     "angular-translate" : "~2.9.1",
+    "angular-translate-storage-cookie" : "~2.9.1",
     "angular-translate-loader-static-files" : "~2.9.1"
   }
 }
